Refactored DR3 for better readability